--- a/pkgs/server/web/package.json
+++ b/pkgs/server/web/package.json
@@ -6,11 +6,15 @@
   "main": "./src/index.ts",
   "dependencies": {
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "boot": "workspace:^",
+    "connect-session-sequelize": "^7.1.4",
     "consola": "^2.15.3",
-    "fastify": "^3.29.0",
+    "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
+    "express-session": "^1.17.3",
     "fs-jetpack": "^4.3.1",
-    "h3": "^0.7.8",
+    "h3": "^0.7.13",
     "http-proxy": "^1.18.1",
     "lodash.camelcase": "^4.3.0",
     "lodash.get": "^4.4.2",
@@ -19,11 +23,19 @@
     "lodash.throttle": "^4.1.1",
     "lodash.trim": "^4.5.1",
     "mime-types": "^2.1.35",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.21.3",
     "server-db": "workspace:^",
     "server-utility": "workspace:^",
     "web-init": "workspace:^"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.2.3",
+    "@types/express-serve-static-core": "^4.17.30",
+    "@types/express-session": "^1.17.5",
     "@types/http-proxy": "^1.17.9",
     "@types/lodash.camelcase": "^4.3.7",
     "@types/lodash.get": "^4.4.7",
@@ -32,6 +44,6 @@
     "@types/lodash.throttle": "^4.1.7",
     "@types/lodash.trim": "^4.5.7",
     "@types/mime-types": "^2.1.1",
-    "@types/node": "^17.0.36"
+    "@types/node": "^18.6.4"
   }
 }
